--- a/TheGraph.html
+++ b/TheGraph.html
@@ -5,27 +5,41 @@
 
 <div id="myPlot" style="width:100%;max-width:700px"></div>
 
-<script>
-var xArray = [1,2];
-var yArray = [25,30,30,30,40,20,20,50];
+<!-- <form id="time">
+  <input type="text">
+  <input type="text">
+  <button onclick="formFunction()">Try it</button>
+  <input type="reset">
+</form> -->
 
-// Define Data
-var data = [{
-  x: xArray,
-  y: yArray,
-  mode:"lines"
-}];
+<input type="text" id="myText" value="">
+<button type="button" onclick="myFunction()">Show</button>
 
-// Define Layout
-var layout = {
-  xaxis: {range: [1, 30], title: "Time (Minutes)"},
-  yaxis: {range: [0, 50], title: "Temperature (°C)"},  
-  title: "Temperature"
-};
 
-// Display using Plotly
-Plotly.newPlot("myPlot", data, layout);
-</script>
+  <script>
+    function myFunction() {
+      console.log(Number(document.getElementById("myText").value)) 
+    }
 
+    var xArray = [1,2];
+    var yArray = [25,30,30,30,40,20,20,50];
+
+    // Define Data
+    var data = [{
+      x: xArray,
+      y: yArray,
+      mode:"lines"
+    }];
+
+    // Define Layout
+    var layout = {
+      xaxis: {range: [1, 30], title: "Time (Minutes)"},
+      yaxis: {range: [0, 50], title: "Temperature (°C)"},  
+      title: "Temperature"
+    };
+
+    // Display using Plotly
+    Plotly.newPlot("myPlot", data, layout);
+  </script>
 </body>
 </html>
