--- a/TheGraph.html
+++ b/TheGraph.html
@@ -59,6 +59,7 @@
 
       //ShowButtons
       function showSensor1(){
+        timeFunction()
         temp1Array = [8,19,44]
       }
       function showSensor2(){
@@ -79,6 +80,7 @@
 
       //HideButtons
       function hideSensor1(){
+        timeFunction()
         temp1Array = [0]
       }
       function hideSensor2(){
