--- a/TheGraph.html
+++ b/TheGraph.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" href="TheGraph.css">
 <body>
   <button onclick="tempFunction()">Temperature</button>
+  <button onclick="humFunction()">Humidity</button>
   <div id="myPlot" style="width:100%;max-width:700px"></div>
     <form>
       <label for="fname"><strong>Start Time:</strong></label>
