--- a/TheGraph.html
+++ b/TheGraph.html
@@ -91,7 +91,6 @@
       <span class="slider"></span>
     </label>
   </div>
-  <script src="TheGraph(Temp).js"></script>
-  <!-- <script src="TheGraph(Hum).js"></script> -->
+  <script src="TheGraph.js"></script>
 </body>
 </html>
