--- a/TheGraph.html
+++ b/TheGraph.html
@@ -57,6 +57,8 @@
       <input type="checkbox" id="SS">
       <span class="slider"></span>
     </label>
+      </div></div>
+    <div class="filler1"></div> <div class="filler1"></div> <div class="filler2"></div>
   </div>
   <script src="TheGraph.js"></script>
 </body>
