--- a/TheGraph.html
+++ b/TheGraph.html
@@ -53,10 +53,10 @@
       <span class="slider"></span>
     </label>
 
-    <label class="switch">
+    <!-- <label class="switch">
       <input type="checkbox" id="SS">
       <span class="slider"></span>
-    </label>
+    </label> -->
       </div></div>
     <div class="filler1"></div> <div class="filler1"></div> <div class="filler2"></div>
   </div>
