--- a/TheGraph.html
+++ b/TheGraph.html
@@ -23,7 +23,7 @@
       <br>
       <input type="text" id="stopTime" value="">
         </div>
-      <input type="reset" value="Reset">
+      <input type="reset" value="Reset/Refresh" onclick="refreshFunction()">
     </form>
 
       <div id="buttons">
