--- a/TheGraph.html
+++ b/TheGraph.html
@@ -60,7 +60,8 @@
       </div></div>
     <div class="filler1"></div> <div class="filler1"></div> <div class="filler2"></div>
   </div>
-  <script src="TheGraph.js"></script>
-  <script src="index.js"></script>
+  <!-- <script src="TheGraph.js"></script> -->
+  <!-- <script src="index.js"></script> -->
+  <script src="test.js"></script>
 </body>
 </html>
