--- a/TheGraph.html
+++ b/TheGraph.html
@@ -3,6 +3,8 @@
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 <link rel="stylesheet" href="TheGraph.css">
 <link rel="stylesheet" href="Website.css">
+<link rel="stylesheet" href="test.html">
+
 <body><div id="body">
     <div id="graphSwitcher">
   <button class="button" style="background-color: red;" onclick="tempFunction()"><strong>Temperature</strong></button>
