--- a/TheGraph.html
+++ b/TheGraph.html
@@ -59,14 +59,15 @@
           <input type="checkbox" id="S5">
           <span class="slider"></span>
         </label>
+      </div>
 
-    <!-- <label class="switch">
-      <input type="checkbox" id="SS">
-      <span class="slider"></span>
-    </label> -->
-      </div></div>
-    <div class="filler1"></div> <div class="filler1"></div> <div class="filler2"></div>
+    </div>
+
+    <div class="filler1"></div> 
+    <div class="filler2"></div>
+
   </div>
+
   <script src="TheGraph.js"></script>
   <!-- <script src="index.js"></script> -->
   <!-- <script src="test.js"></script> -->
