--- a/TemperaturProjektet/from firebase/from firbas.html
+++ b/TemperaturProjektet/from firebase/from firbas.html
@@ -10,7 +10,7 @@
     
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script>
-    <script src="index.js"></script>
+    <script src="from firbas.js"></script>
     
 </body>
 </html>
