--- a/Main files/Index.html
+++ b/Main files/Index.html
@@ -3,6 +3,13 @@
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 <link rel="stylesheet" href="TheGraph.css">
 <link rel="stylesheet" href="Website.css">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+
 
 <body>  
   <div id="body">
@@ -68,8 +75,8 @@
 
   </div>
 
-  <script src="TheGraph.js"></script>
-  <!-- <script src="index.js"></script> -->
-  <!-- <script src="test.js"></script> -->
+  <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
