--- a/Main files/Index.html
+++ b/Main files/Index.html
@@ -11,7 +11,8 @@
 </head>
 
 
-<body>  
+<body>
+  <h1 id="titel"><strong>HETASTE LAGET</strong></h1>
   <div id="body">
 
     <div id="graphSwitcherDiv">
