--- a/Main files/Index.html
+++ b/Main files/Index.html
@@ -12,7 +12,7 @@
 
 
 <body>
-  <h1 id="titel"><strong>HETASTE LAGET</strong></h1>
+  <h1 id="titel"><strong>I HETASTE LAGET</strong></h1>
   <div id="body">
 
     <div id="graphSwitcherDiv">
