--- a/Main files/AboutUs.html
+++ b/Main files/AboutUs.html
@@ -5,6 +5,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<style>
+  .title {
+    margin-left: 2%;
+  }
+</style>
 </head>
 <body>
 
@@ -20,10 +25,14 @@
     </div>
   </div>
 </div>
-<h1>HEJSAN</h1>
-<h1>HEJSAN</h1>
-<h1>HEJSAN</h1>
-<h1>HEJSAN</h1>
-<h1>HEJSAN</h1>
+<br>
+<br>
+<br>
+<h2 class="title">
+  <strong>
+  TemperaturProjektet
+  </strong>
+</h2>
+<p></p>
 </body>
 </html>
