--- a/Main files/Index.html
+++ b/Main files/Index.html
@@ -14,7 +14,7 @@
   <!-- Navbar (sit on top) -->
   <div class="w3-top">
     <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-      <a href="#home" class="w3-bar-item w3-button"><b>BG5</b> Projektet</a>
+      <a href="#home" class="w3-bar-item w3-button">  <h6 id="header"><strong>I HETASTE LAGET</strong></h6></a>
       <!-- Float links to the right. Hide them on small screens -->
       <div class="w3-right w3-hide-small">
         <a href="Index.html" class="w3-bar-item w3-button">Graph</a>
@@ -23,7 +23,9 @@
       </div>
     </div>
   </div>
-  <h1 id="header"><strong>I HETASTE LAGET</strong></h1>
+  <br>
+  <br>
+  <br>
   <div id="body">
 
     <div id="graphSwitcherDiv">
