--- a/Main files/ContactUs.html
+++ b/Main files/ContactUs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>TP - Contact us</title>
+<title>Hetaste Laget - Contact us</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
