--- a/Main files/Index.html
+++ b/Main files/Index.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TP - Graph</title>
+  <title>Hetaste Laget - Graph</title>
 </head>
 <body>
   <!-- Navbar (sit on top) -->
