--- a/Main files/Graph.html
+++ b/Main files/Graph.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-<link rel="stylesheet" href="TheGraph.css">
-<link rel="stylesheet" href="Website.css">
+<link rel="stylesheet" href="Graph.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <head>
   <meta charset="UTF-8">
@@ -14,12 +13,12 @@
   <!-- Navbar (sit on top) -->
   <div class="w3-top">
     <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-      <a href="#home" class="w3-bar-item w3-button">  <h6 id="header"><strong>I HETASTE LAGET</strong></h6></a>
+      <a href="#home" class="w3-bar-item w3-button"><h6 id="header"><strong>I HETASTE LAGET</strong></h6></a>
       <!-- Float links to the right. Hide them on small screens -->
       <div class="w3-right w3-hide-small">
-        <a href="Index.html" class="w3-bar-item w3-button">Graph</a>
-        <a href="AboutUs.html" class="w3-bar-item w3-button">About</a>
-        <a href="ContactUs.html" class="w3-bar-item w3-button">Contact</a>
+        <a href="Graph.html" class="w3-bar-item w3-button">Graph</a>
+        <a href="About.html" class="w3-bar-item w3-button">About</a>
+        <a href="Contact.html" class="w3-bar-item w3-button">Contact</a>
       </div>
     </div>
   </div>
@@ -90,6 +89,6 @@
 
   <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script>
-  <script src="index.js"></script>
+  <script src="Graph.js"></script>
 </body>
 </html>
