--- a/Main files/About.html
+++ b/Main files/About.html
@@ -16,12 +16,12 @@
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <a href="#home" class="w3-bar-item w3-button"><b>BG5</b> Projektet</a>
+    <a href="#home" class="w3-bar-item w3-button"><h6 id="header"><strong>I HETASTE LAGET</strong></h6></a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
-      <a href="Index.html" class="w3-bar-item w3-button">Graph</a>
-      <a href="AboutUs.html" class="w3-bar-item w3-button">About</a>
-      <a href="ContactUs.html" class="w3-bar-item w3-button">Contact</a>
+      <a href="Graph.html" class="w3-bar-item w3-button">Graph</a>
+      <a href="About.html" class="w3-bar-item w3-button">About</a>
+      <a href="Contact.html" class="w3-bar-item w3-button">Contact</a>
     </div>
   </div>
 </div>
