--- a/Main files/About.html
+++ b/Main files/About.html
@@ -5,11 +5,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<style>
-  .title {
-    margin-left: 2%;
-  }
-</style>
+<link rel="stylesheet" href="About.css">
 </head>
 <body>
 
@@ -22,17 +18,23 @@
       <a href="Graph.html" class="w3-bar-item w3-button">Graph</a>
       <a href="About.html" class="w3-bar-item w3-button">About</a>
       <a href="Contact.html" class="w3-bar-item w3-button">Contact</a>
+      <a href="Settings.html" class="w3-bar-item w3-button">Settings</a>
     </div>
   </div>
 </div>
 <br>
 <br>
 <br>
-<h2 class="title">
-  <strong>
-  TemperaturProjektet
-  </strong>
-</h2>
-<p></p>
+<div id="box">
+  <h2 class="title">
+    <strong>
+    TemperaturProjektet - I hetaste laget
+    </strong>
+  </h2>
+  <br>
+  <div class="aboutProject">
+    <p>Projektet <strong>"I hetaste laget"</strong> går ut på att mäta temperatur och luftfuktighet i olika rum och lagra datan i en databas. Databasen vi har använt os av är Realtime Database i Firebase. Datan ska från databasen skickas till hemsidan. Vi har i Basgrupp 5 valt att presentera datan i en graf. Man kan välja om man vill se datan för fuktighet eller temperatur. Temperaturen och luftfuktigheten har mätts under ett dygn med intervall på en minut. Med hjälp av de praktiska inmatnings-rutorna kan man enkelt matan in de tidpunkter man vill se temperatur/luftfuktighet.</p>
+  </div>
+</div>
 </body>
 </html>
