--- a/Main files/Graph.html
+++ b/Main files/Graph.html
@@ -19,6 +19,7 @@
         <a href="Graph.html" class="w3-bar-item w3-button">Graph</a>
         <a href="About.html" class="w3-bar-item w3-button">About</a>
         <a href="Contact.html" class="w3-bar-item w3-button">Contact</a>
+        <a href="Settings.html" class="w3-bar-item w3-button">Settings</a>
       </div>
     </div>
   </div>
