--- a/Main files/Contact.html
+++ b/Main files/Contact.html
@@ -5,18 +5,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<style>
-    #contacts {
-        width: 20%;
-        display: flex;
-        flex-flow: column;
-        align-items: center;
-    }
-
-    .contactInfo {
-        margin-left: 2%;
-    }
-</style>
+<link rel="stylesheet" href="Contact.css">
 </head>
 <body>
 
@@ -29,6 +18,7 @@
       <a href="Graph.html" class="w3-bar-item w3-button">Graph</a>
       <a href="About.html" class="w3-bar-item w3-button">About</a>
       <a href="Contact.html" class="w3-bar-item w3-button">Contact</a>
+      <a href="Settings.html" class="w3-bar-item w3-button">Settings</a>
     </div>
   </div>
 </div>
