--- a/Main files/Settings.html
+++ b/Main files/Settings.html
@@ -22,7 +22,15 @@
       </div>
     </div>
   </div>
-  <label for="fname"><strong>Start Time:</strong></label>
   <br>
-  <input type="text" id="startTime" value="">
+  <br>
+  <br>
+  <br>
+  <form>
+    <label>Sensor1:<br />
+    <input type="text" id="sensor1Value"/></label><br> 
+    <input type="submit" value="Change" onclick="getData()">
+  </form>
+
+  <script src="Settings.js"></script>
 </body>
