--- a/Main files/Graph.html
+++ b/Main files/Graph.html
@@ -87,9 +87,13 @@
     <div class="filler2"></div>
 
   </div>
+  <div id="write">
+    <p>The serial number is: </p>
+</div>
 
   <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script>
   <script src="Graph.js"></script>
+  <!-- <script src="Settings.js"></script> -->
 </body>
 </html>
