--- a/Main files/Graph.html
+++ b/Main files/Graph.html
@@ -3,7 +3,7 @@
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 <link rel="stylesheet" href="Graph.css">
 <link rel="stylesheet" href="Website.css">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="Navigation.css">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,15 +11,15 @@
   <title>I Hetaste Laget - Graph</title>
   <script>
     function aboutUsPage(){
-    window.location.href = "AboutUs.html";
+    window.location.href = "About.html";
     } 
 
     function contactUsPage(){
-      window.location.href = "ContactUs.html"
+      window.location.href = "Contact.html"
     }
 
     function theGraphPage(){
-      window.location.href = "Index.html"
+      window.location.href = "Graph.html"
     }
   </script>
 </head>
