--- a/Main files/About.html
+++ b/Main files/About.html
@@ -7,6 +7,9 @@
 <link rel="stylesheet" href="Navigation.css">
 <link rel="stylesheet" href="About.css">
 <script>
+  function theSettingsPage(){
+  window.location.href = "Settings.html"
+  }
   function aboutUsPage(){
   window.location.href = "About.html";
   } 
@@ -28,6 +31,7 @@
       <button class="navButton" id="navTheGraph" onclick="theGraphPage()">The Graph</button>
       <button class="navButton" id="navContactUs" onclick="contactUsPage()">Contact Us</button> <!--soon to be removed?-->
       <button class="navButton" id="navAboutUs" onclick="aboutUsPage()">About Us</button>
+      <button class="navButton" id="navTheSettings" onclick="theSettingsPage()">Settings</button>
     </div>
   </div>
 
