--- a/Main files/Contact.html
+++ b/Main files/Contact.html
@@ -5,23 +5,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="Navigation.css">
-<style>
-    body {
-        margin: 0;
-    }
-
-    #contacts {
-        width: 20%;
-        display: flex;
-        flex-flow: column;
-        align-items: center;
-    }
-
-    .contactInfo {
-        margin-left: 2%;
-    }
-
-</style>
+<link rel="stylesheet" href="Contact.css">
 <script>
     function aboutUsPage(){
     window.location.href = "About.html";
@@ -43,9 +27,10 @@
     <div id="navBar">
         <button id="iHetasteLaget"><strong>I Hetaste Laget</strong></button>
         <div id="navButtonsDiv">
-          <button class="navButton" id="navTheGraph" onclick="theGraphPage()">The Graph</button>
-          <button class="navButton" id="navContactUs" onclick="contactUsPage()">Contact Us</button>
-          <button class="navButton" id="navAboutUs" onclick="aboutUsPage()">About Us</button>
+            <button class="navButton" id="navTheGraph" onclick="theGraphPage()">The Graph</button>
+            <button class="navButton" id="navContactUs" onclick="contactUsPage()">Contact Us</button>
+            <button class="navButton" id="navAboutUs" onclick="aboutUsPage()">About Us</button>
+            <button class="navButton" id="navTheSettings" onclick="theSettingsPage()">Settings</button>
         </div>
     </div>
 
