--- a/Main files/Graph.html
+++ b/Main files/Graph.html
@@ -10,6 +10,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>I Hetaste Laget - Graph</title>
   <script>
+    function theSettingsPage(){
+    window.location.href = "Settings.html"
+    }
+
     function aboutUsPage(){
     window.location.href = "About.html";
     } 
@@ -31,6 +35,7 @@
       <button class="navButton" id="navTheGraph" onclick="theGraphPage()">The Graph</button>
       <button class="navButton" id="navContactUs" onclick="contactUsPage()">Contact Us</button>
       <button class="navButton" id="navAboutUs" onclick="aboutUsPage()">About Us</button>
+      <button class="navButton" id="navTheSettings" onclick="theSettingsPage()">Settings</button>
     </div>
   </div>
   
