--- a/Main files/Contact.html
+++ b/Main files/Contact.html
@@ -7,16 +7,20 @@
 <link rel="stylesheet" href="Navigation.css">
 <link rel="stylesheet" href="Contact.css">
 <script>
+    function theSettingsPage(){
+        window.location.href = "Settings.html"
+    }
+
     function aboutUsPage(){
-    window.location.href = "About.html";
+        window.location.href = "About.html";
     } 
 
     function contactUsPage(){
-    window.location.href = "Contact.html"
+        window.location.href = "Contact.html"
     }
 
     function theGraphPage(){
-    window.location.href = "Graph.html"
+        window.location.href = "Graph.html"
     }
 </script>
 <link rel="stylesheet" href="Contact.css">
