--- a/Main files/Contact.html
+++ b/Main files/Contact.html
@@ -80,23 +80,23 @@
     <script>
         function copyEmail1() {
             navigator.clipboard.writeText("axel.roxenborg@abbgymnasiet.se");
-            alert("Copied Axel's mail successfully!");
+            alert("Copied Axel's mail to the clipboard");
         }
         function copyEmail2() {
             navigator.clipboard.writeText("oliver.sarebro@abbgymnasiet.se");
-            alert("Copied Oliver's mail successfully!");
+            alert("Copied Oliver's mail to the clipboard");
         }
         function copyEmail3() {
             navigator.clipboard.writeText("andreas.sananes@abbgymnasiet.se");
-            alert("Copied Andreas mail successfully!");
+            alert("Copied Andreas mail to the clipboard");
         }
         function copyEmail4() {
             navigator.clipboard.writeText("axel.rosenberg@abbgymnasiet.se");
-            alert("Copied Axel's mail successfully!");
+            alert("Copied Axel's mail to the clipboard");
         }
         function copyEmail5() {
             navigator.clipboard.writeText("kevin.nedell@abbgymnasiet.se");
-            alert("Copied Kevin's mail successfully!");
+            alert("Copied Kevin's mail to the clipboard");
         }
     </script>
 </body>
