--- a/Main files/Graph.html
+++ b/Main files/Graph.html
@@ -46,8 +46,6 @@
       <button class="button" id="humButton" onclick="humFunction()"><strong>Humidity</strong></button>
     </div>
 
-    <div class="filler1"></div>
-
     <div id="centre">
 
       <div id="myPlot"></div>
@@ -98,8 +96,7 @@
 
     </div>
 
-    <div class="filler1"></div> 
-    <div class="filler2"></div>
+    <div class="filler"></div> 
 
   </div>
   <div id="write">
