--- a/Main files/Contact.html
+++ b/Main files/Contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Hetaste Laget - Contact us</title>
+<title>I Hetaste Laget - Contact us</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="Navigation.css">
