--- a/Main files/Settings.html
+++ b/Main files/Settings.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Hetaste Laget - About us</title>
+<title>I Hetaste Laget - About us</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -22,7 +22,7 @@
 </head>
 <body>
 
-  
+
 
   <form>
     <label>Sensor1:<br />
