--- a/Main files/Settings.html
+++ b/Main files/Settings.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>I Hetaste Laget - About us</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="About.css">
-<script>
+  <title>I Hetaste Laget - About us</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="About.css">
+  <script>
+  function theSettingsPage(){
+    window.location.href = "Settings.html"
+  }
+
   function aboutUsPage(){
-  window.location.href = "About.html";
+    window.location.href = "About.html";
   } 
 
   function contactUsPage(){
-  window.location.href = "Contact.html"
+    window.location.href = "Contact.html"
   }
 
   function theGraphPage(){
-  window.location.href = "Graph.html"
+    window.location.href = "Graph.html"
   }
-</script>
+  </script>
 </head>
 <body>
 
-
+  
 
   <form>
     <label>Sensor1:<br />
